# pdf-combiner-wasm

./: Cargo.toml  readme.md
client/: index.html  index.js  index_old.js
src/: lib.rs
src/utils/: merge_pdf.rs
