[package]
name = "pdf-combiner-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
lopdf = "0.32.0"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.67"
features = [
    'File',
    'console',
    'FileList',
    "Blob",
    "FilePropertyBag",
    "BlobPropertyBag",
]


[profile.release]
lto = true
